# sudoku-solver

./: Cargo.toml  ReadMe.md  ReadMe.ru.md
src/: lib.rs  ss_gtk.rs
src/ss_gtk/: sudoku_solver_app.rs  sudoku_solver_window.rs
src/ss_gtk/sudoku_solver_app/: imp.rs
src/ss_gtk/sudoku_solver_window/: imp.rs
