[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
rfd = "0.14.1"
serde_json = "1.0.117"
slint = { version = "1.5.1", features = ["gettext"] }
sudoku_solver_lib = { version = "0.1.4", git = "ssh://github.com/Lashhev/sudoku_solver_lib.git" }

[[bin]]
name = "gtk_main"

[[bin]]
name = "slint_main"
